update to a list of data types