@@ -20,6 +20,7 @@ import org.bson.types.ObjectId;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class MongoDBMappingDAO extends MongoDAO implements IMappingDAO {
 
@@ -33,8 +34,19 @@ public class MongoDBMappingDAO extends MongoDAO implements IMappingDAO {
     }
 
     @Override
-    public List<MappingSet> getMappingSets() {
-        return this.dataStore.find(MappingSet.class).iterator().toList();
+    public List<MappingSet> getMappingSets(String dataType) {
+        // Fetch all MappingSets
+        List<MappingSet> allMappingSets = this.dataStore.find(MappingSet.class).iterator().toList();
+
+        // If dataType is null, return all MappingSets without filtering
+        if (dataType == null) {
+            return allMappingSets;
+        }
+
+        // Filter the MappingSets based on the dataType parameter
+        return allMappingSets.stream()
+            .filter(mappingSet -> mappingSet.getDataTypes().contains(dataType))
+            .collect(Collectors.toList());
     }
 
     @Override
